--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,11 @@ dependencies:
   flutter_dotenv: ^6.0.0
   flutter_svg: ^2.2.1
   get_it: ^8.2.0
+  logging: ^1.3.0
+  path: ^1.9.1
+  path_provider: ^2.1.5
+  sqflite_common_ffi: ^2.3.6
+  test: ^1.26.2
 
 dev_dependencies:
   flutter_test:
