--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
 
 dependencies:
   bcrypt: ^1.1.3
+  command_it: ^8.0.0
   country_flags: ^4.1.0
   flutter:
     sdk: flutter
@@ -16,6 +17,7 @@ dependencies:
   flutter_svg: ^2.2.1
   freezed_annotation: ^3.1.0
   get_it: ^8.2.0
+  go_router: ^16.3.0
   logging: ^1.3.0
   mocktail: ^1.0.4
   multiple_result: ^5.2.0
