--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "projeto_livre_pam" "\0"
+            VALUE "FileDescription", "hot_tourist_destinations" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "projeto_livre_pam" "\0"
+            VALUE "InternalName", "hot_tourist_destinations" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2025 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "projeto_livre_pam.exe" "\0"
-            VALUE "ProductName", "projeto_livre_pam" "\0"
+            VALUE "OriginalFilename", "hot_tourist_destinations.exe" "\0"
+            VALUE "ProductName", "hot_tourist_destinations" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
