--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   multiple_result: ^5.2.0
   path: ^1.9.1
   path_provider: ^2.1.5
+  sqflite: ^2.4.1
   sqflite_common_ffi: ^2.3.6
   test: ^1.26.2
 
